solved bug with navigation on tablets

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -49,7 +49,7 @@
   border: 0;
   margin: 0;
   overflow: visible; }
-  @media (max-width: 992px) {
+  @media (max-width: 991px) {
     .hamburger {
       display: inline-block; } }
   .hamburger:hover {
@@ -198,7 +198,7 @@ html {
 
 .main {
   padding-top: 45px; }
-  @media (max-width: 992px) {
+  @media (max-width: 991px) {
     .main {
       padding-top: 45px; } }
 
@@ -211,11 +211,11 @@ html {
   box-shadow: 0px 14px 72px 1px rgba(0, 0, 0, 0.65);
   background-color: rgba(53, 53, 53, 0.95);
   border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
-  @media (max-width: 992px) {
+  @media (max-width: 991px) {
     .nav {
       height: 45px;
       padding: 0; } }
-  @media (max-width: 992px) {
+  @media (max-width: 991px) {
     .nav__list {
       box-shadow: 0px 14px 72px 1px rgba(0, 0, 0, 0.65);
       background-color: rgba(53, 53, 53, 0.95);
@@ -263,14 +263,14 @@ html {
     color: blue !important;
     right: -1px; }
 
-@media (max-width: 992px) {
+@media (max-width: 991px) {
   .collapse:not(.show) {
     display: block;
     opacity: 0;
     transform: translate3d(0, -100%, 0);
     transition: transform 0.25s, opacity 0.15s; } }
 
-@media (max-width: 992px) {
+@media (max-width: 991px) {
   .collapse.show {
     opacity: 1;
     transform: translate3d(0, 0, 0);
@@ -300,7 +300,7 @@ html {
     position: relative;
     z-index: 4;
     overflow-y: hidden; }
-    @media (max-width: 992px) {
+    @media (max-width: 991px) {
       .object__title {
         font-size: 4em; } }
   .object__title p {
@@ -310,7 +310,7 @@ html {
   .object__container {
     position: relative;
     padding: 40px 40px 60px; }
-    @media (max-width: 992px) {
+    @media (max-width: 991px) {
       .object__container {
         padding: 0 0 40px; } }
   .object__bg {
@@ -330,7 +330,7 @@ html {
     will-change: transform, filter, background-size;
     transition: background-size 5s ease-in-out, filter 5s ease-out;
     animation: Fade-in-05 4s; }
-    @media (max-width: 992px) {
+    @media (max-width: 991px) {
       .object__bg, .object__title-bg {
         background-size: 150%;
         height: 110%;
@@ -348,7 +348,7 @@ html {
     filter: blur(10px) saturate(2.2) brightness(1.4);
     background-size: 150%;
     transition: background-size 3s ease-out, filter 3s ease-out; }
-    @media (max-width: 992px) {
+    @media (max-width: 991px) {
       .object__container:hover .object__bg,
       .object__container:focus .object__bg,
       .object__container:active .object__bg {
