--- a/src/styles/variables/_breakpoints.scss
+++ b/src/styles/variables/_breakpoints.scss
@@ -2,6 +2,6 @@ $screen-xs-min: 575px;
 $screen-xs-max: 576px;
 $screen-sm-min: 767px;
 $screen-sm-max: 768px;
-$screen-md-min: 991px;
-$screen-md-max: 992px;
+$screen-md-min: 990px;
+$screen-md-max: 991px;
 $screen-lg-max: 1200px;
